# orbit-wars-beam-search

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  opponent.py  package_submission.py  pytest.ini  requirements-dev.txt  submission.py  test.py  tune.py
.github/workflows/: ci.yml
opponents/: __init__.py  baseline.py  greedy.py  mirror.py
rules/: AGENTS.md  README.md  main.py
src/: bindings.cpp  candidate.hpp  crawler_engine.hpp  crawler_engine_belief.cpp  crawler_engine_engine.cpp  crawler_engine_internal.cpp  crawler_engine_internal.hpp  crawler_engine_mcts.cpp  crawler_engine_policy.cpp  crawler_engine_sim.cpp  crawler_engine_state.cpp  eval.hpp  geometry.hpp  orbit_engine.hpp  orbit_engine_bindings.cpp  orbit_engine_candidate.cpp  orbit_engine_engine.cpp  orbit_engine_eval.cpp  orbit_engine_geometry.cpp  orbit_engine_internal.cpp  orbit_engine_internal.hpp  orbit_engine_search.cpp  orbit_engine_sim.cpp  orbit_engine_state.cpp  search.hpp
